# throwing_ptr

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  appveyor.yml  build.py  classes.html  classthrowing_1_1base__null__ptr__exception-members.html  classthrowing_1_1base__null__ptr__exception.html  classthrowing_1_1null__ptr__exception-members.html  classthrowing_1_1null__ptr__exception.html  classthrowing_1_1shared__ptr-members.html  classthrowing_1_1shared__ptr.html  classthrowing_1_1unique__ptr-members.html  classthrowing_1_1unique__ptr.html  classthrowing_1_1unique__ptr_3_01_t[]_00_01_deleter_01_4-members.html  classthrowing_1_1unique__ptr_3_01_t[]_00_01_deleter_01_4.html  clear__compiler__checks_8hpp.html  clear__compiler__checks_8hpp_source.html  compile__fail_2shared__ptr__to__array_8cpp.html  compile__fail_2shared__ptr__to__array_8cpp_source.html  compile__it_8cpp.html  compile__it_8cpp_source.html  compiler__checks_8hpp.html  compiler__checks_8hpp_source.html  conanfile.py  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5aa23d1b15488d0ee3c830134afcb74a.html  dir_880537b6ffc6e00e5dd8b00807fab515.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d6e75c492a1fbb7040c0f5b4e6e92b69.html  files.html  functions.html  (+97 more)
.travis/: install.sh  run.sh
include/throwing/: null_ptr_exception.hpp  shared_ptr.hpp  unique_ptr.hpp
include/throwing/private/: clear_compiler_checks.hpp  compiler_checks.hpp
search/: all_0.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_1.js  files_0.js  files_1.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_1.js  related_0.js  related_1.js  searchdata.js  typedefs_0.js  (+3 more)
tests/: compile_it.cpp  shared_ptr_access.cpp  shared_ptr_assignment.cpp  shared_ptr_atomic.cpp  shared_ptr_cast.cpp  shared_ptr_comparison.cpp  shared_ptr_construction.cpp  shared_ptr_dereference.cpp  shared_ptr_enable_shared_from_this.cpp  shared_ptr_hash.cpp  shared_ptr_make_shared.cpp  shared_ptr_ordering.cpp  shared_ptr_ostream.cpp  shared_ptr_reset.cpp  shared_ptr_swap.cpp  shared_ptr_to_array.cpp  test_helpers.h  test_main.cpp  unique_ptr_access.cpp  unique_ptr_assignment.cpp  unique_ptr_comparison.cpp  unique_ptr_construction.cpp  unique_ptr_dereference.cpp  unique_ptr_hash.cpp  unique_ptr_make_unique.cpp  unique_ptr_ostream.cpp  unique_ptr_release.cpp  unique_ptr_reset.cpp  unique_ptr_swap.cpp  unique_ptr_to_array_access.cpp  unique_ptr_to_array_assignment.cpp  unique_ptr_to_array_assignment_from_convertible.cpp  unique_ptr_to_array_construction.cpp  unique_ptr_to_array_reset.cpp  weak_ptr_assignment.cpp  weak_ptr_construction.cpp  weak_ptr_modifiers.cpp  weak_ptr_observers.cpp
tests/compile_fail/: shared_ptr_to_array.cpp  unique_ptr_a_copy_assignment.cpp  unique_ptr_s_copy_assignment.cpp  unique_ptr_s_operator.cpp
